--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "latest",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-map-gl": "^5.2.7",
     "swr": "0.1.18"
   },
   "license": "ISC"
